--- a/mod2_solution/css.css
+++ b/mod2_solution/css.css
@@ -1,1 +1,60 @@
+@media (min-width=992px){
+    body{
+        width: 100%;
+        margin: auto;
+        font-size: 75%;
 
+    }
+}
+@media (max-width=991px), (min-width=768px){
+    body{
+        width: 90%;
+        margin: auto;
+        font-size: 75%;
+
+    }
+}
+@media (max-width=767px){
+    body{
+        width: 80%;
+        margin: auto;
+        font-size: 75%;
+
+    }
+}
+
+body{
+   font-size: 30px;
+   
+}
+h1{
+    align-items: center;
+    text-transform: capitalize;
+}
+.section_1{
+    background: green;
+    width: 40%;
+
+}
+.section_2{
+    background: yellow;
+    width: 40%;
+
+}
+.section_3{
+    background: red;
+    width: 40%;
+}
+h2{
+    margin-left: 270px;
+    border: 3px solid black;
+    border-top: none;
+    margin-top: 0;
+    top: 0;
+    background: white;
+    
+}
+section{
+    border: 3px solid black;
+    justify-content: space-between;
+}
